[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Dialogs/LoginDialog.gd" type="Script" id=1]

[node name="LoginDialog" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -80.0
margin_right = 160.0
margin_bottom = 80.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -80.0
margin_right = 160.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelUsername" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 82.0
margin_bottom = 40.0
text = "Username"

[node name="LabelPassword" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 48.0
margin_right = 82.0
margin_bottom = 72.0
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditUsername" type="LineEdit" parent="Panel"]
margin_left = 96.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 40.0

[node name="LineEditPassword" type="LineEdit" parent="Panel"]
margin_left = 96.0
margin_top = 48.0
margin_right = 304.0
margin_bottom = 72.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLogin" type="Button" parent="Panel"]
margin_left = 16.0
margin_top = 80.0
margin_right = 192.0
margin_bottom = 104.0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRegister" type="Button" parent="Panel"]
margin_left = 200.0
margin_top = 80.0
margin_right = 304.0
margin_bottom = 104.0
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelResult" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 112.0
margin_right = 304.0
margin_bottom = 136.0
text = "Log into an existing account or register a new one"
autowrap = true
[connection signal="text_entered" from="Panel/LineEditPassword" to="." method="_on_LineEditPassword_text_entered"]
[connection signal="pressed" from="Panel/ButtonLogin" to="." method="_on_ButtonLogin_pressed"]
[connection signal="pressed" from="Panel/ButtonRegister" to="." method="_on_ButtonRegister_pressed"]
